=head1 Krang Changelog

This document contains a list of changes for each release of Krang.

=head2 3.16 (in development)

=over

=item *

At the request of Michael Peters, added 4 flags to
L<Krang::ElementClass::CategoryLink> implementing a 'conditional
publishing behavor' for stories having CategoryLinks.  If this
behavior is set via any 4 flags, the story will be
published if and only if a story/media living in/below the category
that has been set in the CategoryLink has has been modified since it's
last publishing. [Bodo Schulze]

=back

=head2 3.15 - November, 16 2011

=over

=item *

Publishing through the UI no longer locks the session while the publishing
is happening. [Michael Peters]

=item *

Adding C<--no-ssl-symlinks> option to Krang upgrade to skip rebuilding
the SSL cert symlinks. [Michael Peters]

=item *

Added a new C<session_id> method to L<Krang::Session> to make it really
easy to determine the current session's ID. [Michael Peters]

=item *

Fixed story_find help text. [Bodo Schulze]

=item *

Added F<docs/feature_history> to document new features and functional
enhancements from a user perspective. [Bodo Schulze]

=item *

Put back session locking because without it there are race conditions
when we deal with multiple windows and nested data structures in the
sessions. [Michael Peters]

=item *

Allow IFRAME tags in Xinha. [Bodo Schulze]

=item *

Auto-preview media objects that are directly uploaded to a story so
that they will already be ready when the story itself is previewed.
[Michael Peters]

=item *

C<Krang.Ajax.update()> javascript function can now take a function as
the value of C<target> or C<to_top> to be executed on-demand after the
actual request is done. [Michael Peters]

=item *

The second argument to the SQL 'limit' clause must no be a negative
number.  Instead use a very high positive number in the find() method
of backend modules. See
http://http://dev.mysql.com/doc/refman/5.5/en/select.html. [Bodo
Schulze]

=item *
