@@ -22,11 +22,12 @@ CREATE TABLE schedule (
         failure_delay_sec INT UNSIGNED,
         failure_notify_id INT UNSIGNED,
         success_notify_id INT UNSIGNED,
+        daemon_uuid       VARCHAR(128) DEFAULT NULL,
 
         PRIMARY KEY (schedule_id),
         INDEX       (object_type, object_id),
         INDEX       (next_run)
-);
+) ENGINE=InnoDB;
 
 /* add default scheduled tasks for tmp cleaning, session expiration,
 DB analyze runs and rate_limit cleaning */
