@@ -6,6 +6,9 @@ This document contains a list of changes for each release of Krang.
 
 =over
 
+=item * At the request of Michael Peters, allowed multiple schedulers
+to run without processing the same schedules. [Bodo Schulze]
+
 =item *
 
 At the request of Michael Peters, added 4 flags to
